actualizacao do div_bgBlack

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     Hello!
+
+    <div style="background-color: #333; width: 4rem; height:4rem ;">
+      
+    </div>
 </body>
 </html>
